# getml-community

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  INSTALL.md  README.md  docker-bake.hcl  migration.py  mise.toml  release-notes.md
linux-arm64/: CMakeLists.txt  Dockerfile  build.sh  launch_docker.sh  version.sh
src/engine/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  dependencies.json  get_compile_commands.sh  vcpkg-configuration.json  vcpkg.json
src/engine/Code/: .clang-format
src/engine/Code/include/: Hyperparameters.hpp  JSON.hpp  types.hpp
src/engine/Code/src/: AggregationImpl.cpp  Avg.cpp  ConditionMaker.cpp  CriticalValueSorter.cpp  CriticalValues.cpp  DataFrame.cpp  Debugger.cpp  DecisionTree.cpp  DecisionTreeEnsemble.cpp  DecisionTreeEnsembleImpl.cpp  DecisionTreeNode.cpp  Hyperparameters.cpp  JSON.cpp  LossFunctionImpl.cpp  LossFunctionParser.cpp  Matchmaker.cpp  Placeholder.cpp  Sampler.cpp  SquareLoss.cpp  Sum.cpp  TableHolder.cpp  main.cpp  obj.txt
src/engine/cmake/: ccache.cmake  clang_tidy.cmake  conan.cmake  cppcheck.cmake  cpplint.cmake  iwyu.cmake  static_analysis.cmake  vcpkg.cmake  version.cmake
src/engine/include/binning/: CategoricalBinner.hpp  DiscreteBinner.hpp  Float.hpp  Int.hpp  MinMaxFinder.hpp  NumericalBinner.hpp  RownumBinner.hpp  WordBinner.hpp  WordMaker.hpp  binning.hpp
src/engine/include/capnproto/: ObjectGetter.hpp  Parser.hpp  Reader.hpp  Writer.hpp  capnproto.hpp  from_capnproto.hpp  has_from_json_obj.hpp  to_capnproto.hpp
src/engine/include/commands/: AddDfCommand.hpp  Aggregation.hpp  BasicCommand.hpp  BooleanColumnView.hpp  CheckPipeline.hpp  ColumnCommand.hpp  Command.hpp  DataContainer.hpp  DataFrameCommand.hpp  DataFrameFingerprint.hpp  DataFrameFromJSON.hpp  DataFrameOrView.hpp  DataFramesOrViews.hpp  DataModel.hpp  DatabaseCommand.hpp  FeatureLearner.hpp  FeatureLearnerFingerprint.hpp  Fingerprint.hpp  Float.hpp  FloatColumnOrFloatColumnView.hpp  GetBooleanColumn.hpp  GetBooleanColumnContent.hpp  GetBooleanColumnNRows.hpp  GetContent.hpp  Int.hpp  LinearHyperparams.hpp  LinearRegressionHyperparams.hpp  LogisticRegressionHyperparams.hpp  NotSupportedInCommunity.hpp  Pipeline.hpp  PipelineCommand.hpp  Predictor.hpp  PredictorFingerprint.hpp  Preprocessor.hpp  PreprocessorFingerprint.hpp  ProjectCommand.hpp  Roles.hpp  StringColumnOrStringColumnView.hpp  ViewCommand.hpp  WarningFingerprint.hpp  (+2 more)
src/engine/include/communication/: Float.hpp  Int.hpp  Logger.hpp  Monitor.hpp  Receiver.hpp  Sender.hpp  SocketLogger.hpp  ULong.hpp  Warner.hpp  Warning.hpp  Warnings.hpp  communication.hpp
src/engine/include/containers/: ArrayMaker.hpp  CategoricalFeatures.hpp  Column.hpp  ColumnView.hpp  ColumnViewIterator.hpp  DataFrame.hpp  DataFrameContent.hpp  DataFrameIndex.hpp  DataFramePrinter.hpp  DataFrameReader.hpp  Encoding.hpp  Float.hpp  InMemoryEncoding.hpp  Index.hpp  Int.hpp  MemoryMappedEncoding.hpp  MonitorSummary.hpp  NumericalFeatures.hpp  Roles.hpp  Schema.hpp  ULong.hpp  ViewContent.hpp  containers.hpp
src/engine/include/database/: BigQuery.hpp  CSVBuffer.hpp  Command.hpp  Connector.hpp  ContentGetter.hpp  DatabaseParser.hpp  DatabaseReader.hpp  DatabaseSniffer.hpp  Float.hpp  Getter.hpp  GoutilsIterator.hpp  GoutilsTypeInferrer.hpp  Int.hpp  Iterator.hpp  MySQL.hpp  MySQLIterator.hpp  ODBC.hpp  ODBCConn.hpp  ODBCEnv.hpp  ODBCError.hpp  ODBCIterator.hpp  ODBCStmt.hpp  Postgres.hpp  PostgresIterator.hpp  QuerySplitter.hpp  SapHana.hpp  Sqlite3.hpp  Sqlite3Iterator.hpp  TableContent.hpp  database.hpp  sniff.hpp
src/engine/include/debug/: Assert.hpp  Debugger.hpp  StackTrace.hpp  assert_msg.hpp  assert_true.hpp  debug.hpp  debug_log.hpp  throw_unless.hpp
src/engine/include/engine/: Float.hpp  Int.hpp  JSON.hpp  Process.hpp  ULong.hpp  engine.hpp
src/engine/include/fastprop/: Float.hpp  Hyperparameters.hpp  Int.hpp
src/engine/include/fct/: AccessIterator.hpp  Field.hpp  Getter.hpp  IotaIterator.hpp  IotaRange.hpp  Literal.hpp  NamedTuple.hpp  Range.hpp  Ref.hpp  Result.hpp  StringLiteral.hpp  TaggedUnion.hpp  VisitTree.hpp  always_false.hpp  collect.hpp  collect_parallel.hpp  collect_results.hpp  compose.hpp  define_literal.hpp  define_named_tuple.hpp  define_tagged_union.hpp  define_variant.hpp  extract_discriminators.hpp  fct.hpp  field_type.hpp  find_index.hpp  get.hpp  has_named_tuple_method_v.hpp  has_named_tuple_type_v.hpp  iota.hpp  join.hpp  make_named_tuple.hpp  ranges.hpp  remove_fields.hpp  to.hpp  visit.hpp
src/engine/include/featurelearners/: AbstractFeatureLearner.hpp  FeatureLearner.hpp  FeatureLearnerParams.hpp  FitParams.hpp  Float.hpp  Int.hpp  TransformParams.hpp  featurelearners.hpp
src/engine/include/flexbuffers/: OutputArray.hpp  OutputNull.hpp  OutputObject.hpp  OutputValue.hpp  OutputVar.hpp  Parser.hpp  Reader.hpp  Writer.hpp  flexbuffers.hpp  from_flexbuffers.hpp  to_flexbuffers.hpp
src/engine/include/helpers/: Aggregations.hpp  Column.hpp  ColumnView.hpp  (+44 more)
src/engine/overlay-triplets/: aarch64-linux-release.cmake  x64-linux-release.cmake
src/engine/relboost-0.8-linux/: CMakeLists.txt  build.sh  config.json  launch_docker_and_build.sh  launch_docker_and_package.sh  log.txt  package.sh  setup.sh  test.sh  token.json  users.json
src/engine/relboost-0.8-macos/: CMakeLists.txt  build.sh  install.sh  test.sh  token.json  users.json
src/engine/relboost-0.8-ubuntu/: CMakeLists.txt  build.sh  config.json  install.sh  jwks.pub.json  log.txt  test.sh  token.json  users.json
src/engine/relboost-0.8-windows/: CMakeLists.txt
src/engine/src/: CMakeLists.txt  obj.txt
src/engine/test/: CMakeLists.txt  gwt.h
src/python-api/: LICENSE  README.md  hatch_build.py  pyproject.toml  setup.py  version.sh
src/python-api/getml/: __init__.py  communication.py  constants.py  cross_validation.py  exceptions.py  helpers.py  log.py  progress_bar.py  spark.py  version.py
src/python-api/tests/: conftest.py  test_launch.py  test_setup_meta.py
(+3901 files in other folders)
