# copyright 2022 the sqlnet company gmbh
#
# this file is licensed under the elastic license 2.0 (elv2).
# refer to the license.txt file in the root of the repository
# for details.
#

[build-system]
requires = ["wheel", "hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "getml"
description = "Python API for getML"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Elastic License 2.0 (ELv2)"}
authors = [{name="getML", email="getml@getml.com"},]
keywords = ["AutoML", "feature learning", "feature engineering"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pyarrow>=11.0,<11.1",
    "numpy>=1.22",
    "jinja2",
    "scipy",
]

[tool.hatch.version]
source = "code"
path = "getml/version.py"
expression = "__version__"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "pyright",
  "ruff==0.4.5",
  "uv",
  "hatchling",
  "pyspark",
  "pytest",
]

[tool.hatch.build]
include = [
    "getml",
    "VERSION",
    "getml/utilities/templates/*.jinja2",
]
exclude = ["tests"]

[tool.hatch.build.target.wheel]
include = [".getML/**/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[project.urls]
"Hompage" = "https://getml.com"
"Documentation" = "https://docs.getml.com/latest"
"Bug Tracker" = "https://github.com/getml/getml-community/issues"
"Download" = "https://getml.com/product/download/"
"Source Code" = "https://github.com/getml/getml-community"

[project.optional-dependencies]
pyspark = ["pyspark"]
test = ["pytest", "pyspark"]
development = ["pyright", "ruff==0.4.5"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["PL", "UP"]
ignore = [
  # Allow over
  "A003",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow for string literals in exceptions
  "EM",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLR0124"
]
exclude = ["tests/**/*",]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
